refactor(frontend): simplify logo styling and update text content fix(backend): improve label resolution and result processing
Update frontend styling to use CSS variables and remove gradient text
Modify backend to handle label resolution more robustly and limit top results

--- a/web_app/frontend/index.html
+++ b/web_app/frontend/index.html
@@ -14,16 +14,15 @@
         <!-- Header -->
         <header>
             <div class="logo">
-                <span class="logo-icon">✨</span>
                 <h1>Meraki Tagger</h1>
             </div>
-            <p class="subtitle">AI-powered sentence classification for humanitarian data.</p>
+            <p class="subtitle">Multi-label sentence tagging for humanitarian narratives.</p>
         </header>
 
         <!-- Input Section -->
         <main>
             <div class="input-card">
-                <textarea id="inputText" placeholder="Paste your paragraph here (e.g., 'The team distributed food...')..."></textarea>
+                <textarea id="inputText" placeholder="Paste a paragraph to analyze..."></textarea>
                 <div class="actions">
                     <button id="analyzeBtn" onclick="analyzeText()">
                         <span id="btnText">Analyze Text</span>
@@ -49,7 +48,7 @@
         </main>
 
         <footer>
-            <p>Powered by Meraki Labs & Hugging Face Inference API</p>
+            <p>Built by Aaran Nihalani</p>
         </footer>
     </div>
     <script src="script.js"></script>
