feat: add supabase integration and ui improvements
- Store inference results in Supabase when SUPABASE_KEY is provided
- Add divider and section title for table view in UI
- Limit displayed tags to top 2 results and increase confidence threshold

--- a/web_app/frontend/index.html
+++ b/web_app/frontend/index.html
@@ -45,6 +45,8 @@
                 <div id="resultsList" class="results-list">
                     <!-- Cards injected by JS -->
                 </div>
+                <div class="divider"></div>
+                <h3 class="section-title">Table View</h3>
                 <div id="resultsTable" class="hidden">
                     <table>
                         <thead>
