feat(file-upload): add file upload support for txt, docx and pdf files
Add new file upload functionality to extract text from uploaded documents. The frontend now includes a file input and upload button, while the backend handles file processing and text extraction. Required dependencies (python-multipart, python-docx, pypdf) have been added to requirements.txt.

--- a/web_app/frontend/index.html
+++ b/web_app/frontend/index.html
@@ -31,6 +31,10 @@
                     <button id="clearBtn" onclick="clearText()" class="secondary">Clear</button>
                     <button id="tableBtn" onclick="renderTable()" class="secondary">Table View</button>
                 </div>
+                <div class="actions">
+                    <input type="file" id="fileInput" accept=".txt,.docx,.pdf">
+                    <button id="uploadBtn" onclick="uploadFile()" class="secondary">Upload & Extract</button>
+                </div>
             </div>
 
             <!-- Error Message -->
